--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
+
 android {
     compileSdkVersion 25
 	buildToolsVersion "25.0.3"
@@ -29,15 +30,20 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:design:26.0.0-alpha1'
+    compile('com.squareup.okhttp3:okhttp:3.11.0'){
+        exclude group: 'com.squareup.okhttp3'
+        exclude group: 'com.squareup.okio'
+    }
+    compile('cn.bmob.android:bmob-sdk:3.6.3') {
+        exclude group: 'com.squareup.okhttp3'
+        exclude group: 'com.squareup.okio'
+    }
     androidTestCompile 'com.android.support:support-annotations:26.0.0-alpha1'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
-    compile 'cn.bmob.android:bmob-sdk:3.6.3'
-    compile 'cn.bmob.android:http-legacy:1.0'
-    compile 'com.squareup.okhttp3:okhttp:3.11.0'
-    compile 'com.google.code.gson:gson:2.8.5'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-14'
+    compile 'cn.bmob.android:http-legacy:1.0'
     compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-14'
+    testCompile 'junit:junit:4.12'
 }
