完成首页功能（UI样式未调） 排行榜列表页下啦刷新功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-        </activity>
-        <activity android:name=".list.VideoListActivity">
+        <activity android:name=".launcher.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -33,6 +31,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".detail.VideoDetailActivity">
+        </activity>
+        <activity android:name=".top250.Top250ListActivity">
         </activity>
     </application>
 
