调整首页和详情页recycler的样式 引入autosize

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-14'
     testCompile 'junit:junit:4.12'
     compile 'org.jsoup:jsoup:1.11.3'
+    compile 'me.jessyan:autosize:1.0.1'
 }
