--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <meta-data
             android:name="design_height_in_dp"
             android:value="640"/>
+
         <activity android:name=".launcher.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -39,6 +40,8 @@
         <activity android:name=".detail.VideoDetailActivity">
         </activity>
         <activity android:name=".top250.Top250ListActivity">
+        </activity>
+        <activity android:name=".search.SearchActivity">
         </activity>
     </application>
 
