--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,11 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 25
-	buildToolsVersion "25.0.3"
+    compileSdkVersion 26
     defaultConfig {
         applicationId "com.henry.cocovideodata"
         minSdkVersion 21
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -22,30 +21,34 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
-    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:design:26.0.0-alpha1'
-    compile('com.squareup.okhttp3:okhttp:3.11.0'){
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:26.1.0'
+    implementation('com.squareup.okhttp3:okhttp:3.11.0') {
         exclude group: 'com.squareup.okhttp3'
         exclude group: 'com.squareup.okio'
     }
-    compile('cn.bmob.android:bmob-sdk:3.6.3') {
+    implementation('cn.bmob.android:bmob-sdk:3.6.3') {
         exclude group: 'com.squareup.okhttp3'
         exclude group: 'com.squareup.okio'
     }
-    androidTestCompile 'com.android.support:support-annotations:26.0.0-alpha1'
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
-    compile 'com.github.bumptech.glide:glide:3.5.2'
-    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-14'
-    compile 'cn.bmob.android:http-legacy:1.0'
-    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-14'
-    testCompile 'junit:junit:4.12'
-    compile 'org.jsoup:jsoup:1.11.3'
-    compile 'me.jessyan:autosize:1.0.1'
+    androidTestImplementation 'com.android.support:support-annotations:26.0.0-alpha1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+    implementation 'com.github.bumptech.glide:glide:3.5.2'
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-14'
+    implementation 'cn.bmob.android:http-legacy:1.0'
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-14'
+    testImplementation 'junit:junit:4.12'
+    implementation 'org.jsoup:jsoup:1.11.3'
+    implementation 'me.jessyan:autosize:1.0.1'
 }
